--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -9,5 +9,11 @@
 
   <body>
     <%= yield %>
+    <br>
+    Regards:
+    <br>
+    Mohsin Khalid
+    <br>
+    mkmohsinkhalid@gmail.com
   </body>
 </html>
